--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
 .vscode/
 .DS_Store
-a.out
-input.txt
-output.txt
-a.cpp
-b.cpp
-c.cpp
-val.cpp
-gen.cpp
-judge.sh
-debug.sh
-compare.sh
-submit.txt
-submit1.txt
-submit2.txt
-testcase.txt
 testlib.h
 heuristic
+algorithm
