--- a/.verify-helper/config.toml
+++ b/.verify-helper/config.toml
@@ -1,3 +1,3 @@
 [[languages.cpp.environments]]
 CXX = "g++"
-CXXFLAGS = ["-std=c++20", "-Wall", "-Ofast", "-march=native", "-Wl,-stack_size,0x20000000"]
+CXXFLAGS = ["-std=c++20", "-Wall", "-Ofast"]
